refactor: update font to monospace

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     body {
       background-color: var(--bg-color);
       color: var(--text-color);
-      font-family: 'Lucida Console', monospace;
+      font-family: 'SF Mono', SFMono-Regular, ui-monospace, 'DejaVu Sans Mono', Menlo, Consolas, monospace;
       font-size: 18px;
       max-width: 1280px;
       margin: 0 auto;
@@ -118,7 +118,7 @@
 
     <div class="svg-container">
       <svg viewBox="0 0 180 50" xmlns="http://www.w3.org/2000/svg">
-        <text x="0" y="35" font-family="'Lucida Console', monospace" font-size="28" font-weight="bold" fill="currentColor">
+        <text x="0" y="35" font-family="'SF Mono', SFMono-Regular, ui-monospace, 'DejaVu Sans Mono', Menlo, Consolas, monospace" font-size="28" font-weight="bold" fill="currentColor">
           &gt;&gt; samyak
         </text>
       </svg>
