feat: update deep research project link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       color: var(--text-color);
       font-family: 'SF Mono', SFMono-Regular, ui-monospace, 'DejaVu Sans Mono', Menlo, Consolas, monospace;
       font-size: 18px;
+      line-height: 1.6;
       max-width: 1280px;
       margin: 0 auto;
       padding: 0 50px;
@@ -70,13 +71,12 @@
     }
 
     .separator {
-      letter-spacing: -9px;
     }
 
     hr {
       border: none;
-      height: 2px;
-      background-color: lightgrey;
+      height: 1px;
+      background-color: #e0e0e0;
       width: 100%;
       margin: 30px auto;
     }
@@ -87,7 +87,7 @@
     }
 
     .links-container a {
-      margin: 0 10px;
+      margin: 0 15px;
     }
 
     .product-photo {
@@ -146,7 +146,7 @@
   <h2 id="projects">projects</h2>
   <p>Here’s a list of current and upcoming work:</p>
   <ul>
-    <li><strong><a href="https://github.com/samyak1729/deep-research">deep research from scratch</a></strong> (ongoing)
+    <li><strong><a href="https://github.com/samyak1729/deep-research-agent">deep research from scratch</a></strong> (ongoing)
       <ul>
         <li>rough implementation of deep research as seen in chatgpt, grok, gemini, etc</li>
         <li>makes use of gemini 1.5 flash and tavily for websearch</li>
